--- a/pages/index.html
+++ b/pages/index.html
@@ -85,7 +85,7 @@
               <li class="col-3 col-md-6 col-sm-4 px-3 mb-md-6">
                   <div class="customer-item">
                       <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-1.png" alt="Jessy">
-                      <div class="p-4">
+                      <div class="customer-text p-4">
                           <p class="customer-name mb-2">Jessy</p>
                           <p class="mb-18">眼鏡品質優良，下次還會想來這邊購買！</p>
                           <p class="customer-date">2021/06/20</p>
@@ -95,7 +95,7 @@
               <li class="col-3 col-md-6 col-sm-4 px-3 mb-md-6">
                   <div class="customer-item">
                       <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-2.png" alt="凱倫">
-                      <div class="p-4">
+                      <div class="customer-text p-4">
                           <p class="customer-name mb-2">凱倫</p>
                           <p class="mb-18">做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
                           <p class="customer-date">2021/04/18</p>
@@ -105,7 +105,7 @@
               <li class="col-3 col-md-6 col-sm-4 px-3 mb-sm-6">
                   <div class="customer-item">
                       <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-3.png" alt="悠悠">
-                      <div class="p-4">
+                      <div class="customer-text p-4">
                           <p class="customer-name mb-2">悠悠</p>
                           <p class="mb-18">謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
                           <p class="customer-date">2020/12/25</p>
@@ -115,7 +115,7 @@
               <li class="col-3 col-md-6 col-sm-4 px-3">
                   <div class="customer-item">
                       <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-4.png" alt="Kyuan">
-                      <div class="p-4">
+                      <div class="customer-text p-4">
                           <p class="customer-name mb-2">Kyuan</p>
                           <p class="mb-18">服務很好，品質沒有任何問題，非常喜歡。</p>
                           <p class="customer-date">2020/10/31</p>
@@ -134,13 +134,13 @@
                   <label class="mb-2" for="name">姓名</label>
                   <input class="mb-4" id="name" type="text" placeholder="陳小明">
                   <label class="mb-2" for="mobile">聯絡電話</label>
-                  <input class="mb-4" id="mobile" type="text" placeholder="0912-345-678">
+                  <input class="mb-4" id="mobile" type="tel" placeholder="0912-345-678">
                   <label class="mb-2" for="mail">電子郵件</label>
-                  <input class="mb-4" id="mail" type="text" placeholder="example@email.com">
+                  <input class="mb-4" id="mail" type="email" placeholder="example@email.com">
                   <label class="mb-2" for="feedback">意見反應</label>
                   <textarea class="mb-4" id="feedback" name="feedback" placeholder="請輸入您的意見"></textarea>
                   <div class="d-flex mb-12 mb-sm-6">
-                      <input class="mr-1" type="checkbox" name="privacy" value="agree">
+                      <input class="mr-1" type="checkbox" name="privacy" id="privacy" value="agree">
                       <label for="privacy">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
                   </div>
                   <input class="mx-auto" type="submit" value="確認送出">
