--- a/pages/product.html
+++ b/pages/product.html
@@ -33,7 +33,7 @@
                 <li class="col-3 col-md-6 col-sm-4 px-3 mb-20 mb-md-10 mb-sm-6">
                     <img class="product-img" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-1.png" alt="glass BJ41600S">
                     <div class="d-flex justify-space-between">
-                        <p><a class="product-name" href="#">BJ41600S</a></p>
+                        <h6><a class="product-name" href="#">BJ41600S</a></h6>
                         <p class="product-price">NTD3,490</p>
                     </div>
                     <div class="d-flex">
@@ -44,7 +44,7 @@
                 <li class="col-3 col-md-6 col-sm-4 px-3 mb-20 mb-md-10 mb-sm-6">
                     <img class="product-img" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-2.png" alt="glass BJ41600S">
                     <div class="d-flex justify-space-between">
-                        <p><a class="product-name" href="#">BJ41600S</a></p>
+                        <h6><a class="product-name" href="#">BJ41600S</a></h6>
                         <p class="product-price">NTD3,490</p>
                     </div>
                     <div class="d-flex">
@@ -55,7 +55,7 @@
                 <li class="col-3 col-md-6 col-sm-4 px-3 mb-20 mb-md-10 mb-sm-6">
                     <img class="product-img" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-3.png" alt="glass BJ41600S">
                     <div class="d-flex justify-space-between">
-                        <p><a class="product-name" href="#">BJ41600S</a></p>
+                        <h6><a class="product-name" href="#">BJ41600S</a></h6>
                         <p class="product-price">NTD3,490</p>
                     </div>
                     <div class="d-flex">
@@ -66,7 +66,7 @@
                 <li class="col-3 col-md-6 col-sm-4 px-3 mb-20 mb-md-10 mb-sm-6">
                     <img class="product-img" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-4.png" alt="glass BJ41600S">
                     <div class="d-flex justify-space-between">
-                        <p><a class="product-name" href="#">BJ41600S</a></p>
+                        <h6><a class="product-name" href="#">BJ41600S</a></h6>
                         <p class="product-price">NTD3,490</p>
                     </div>
                     <div class="d-flex">
@@ -77,7 +77,7 @@
                 <li class="col-3 col-md-6 col-sm-4 px-3 mb-20 mb-md-10 mb-sm-6">
                     <img class="product-img" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-5.png" alt="glass BJ41600S">
                     <div class="d-flex justify-space-between">
-                        <p><a class="product-name" href="#">BJ41600S</a></p>
+                        <h6><a class="product-name" href="#">BJ41600S</a></h6>
                         <p class="product-price">NTD3,490</p>
                     </div>
                     <div class="d-flex">
@@ -88,7 +88,7 @@
                 <li class="col-3 col-md-6 col-sm-4 px-3 mb-20 mb-md-10 mb-sm-6">
                     <img class="product-img" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-6.png" alt="glass BJ41600S">
                     <div class="d-flex justify-space-between">
-                        <p><a class="product-name" href="#">BJ41600S</a></p>
+                        <h6><a class="product-name" href="#">BJ41600S</a></h6>
                         <p class="product-price">NTD3,490</p>
                     </div>
                     <div class="d-flex">
@@ -99,7 +99,7 @@
                 <li class="col-3 col-md-6 col-sm-4 px-3 mb-20 mb-md-10 mb-sm-6">
                     <img class="product-img" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-7.png" alt="glass BJ41600S">
                     <div class="d-flex justify-space-between">
-                        <p><a class="product-name" href="#">BJ41600S</a></p>
+                        <h6><a class="product-name" href="#">BJ41600S</a></h6>
                         <p class="product-price">NTD3,490</p>
                     </div>
                     <div class="d-flex">
@@ -110,7 +110,7 @@
                 <li class="col-3 col-md-6 col-sm-4 px-3 mb-20 mb-md-10 mb-sm-6">
                     <img class="product-img" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-8.png" alt="glass BJ41600S">
                     <div class="d-flex justify-space-between">
-                        <p><a class="product-name" href="#">BJ41600S</a></p>
+                        <h6><a class="product-name" href="#">BJ41600S</a></h6>
                         <p class="product-price">NTD3,490</p>
                     </div>
                     <div class="d-flex">
@@ -121,7 +121,7 @@
                 <li class="col-3 col-md-6 col-sm-4 px-3 mb-20 mb-md-10 mb-sm-6">
                     <img class="product-img" class="product-img" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-9.png" alt="glass BJ41600S">
                     <div class="d-flex justify-space-between">
-                        <p><a class="product-name" href="#">BJ41600S</a></p>
+                        <h6><a class="product-name" href="#">BJ41600S</a></h6>
                         <p class="product-price">NTD3,490</p>
                     </div>
                     <div class="d-flex">
@@ -132,7 +132,7 @@
                 <li class="col-3 col-md-6 col-sm-4 px-3 mb-20 mb-md-10 mb-sm-6">
                     <img class="product-img" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-10.png" alt="glass BJ41600S">
                     <div class="d-flex justify-space-between">
-                        <p><a class="product-name" href="#">BJ41600S</a></p>
+                        <h6><a class="product-name" href="#">BJ41600S</a></h6>
                         <p class="product-price">NTD3,490</p>
                     </div>
                     <div class="d-flex">
@@ -143,7 +143,7 @@
                 <li class="col-3 col-md-6 col-sm-4 px-3 mb-20 mb-sm-6">
                     <img class="product-img" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-11.png" alt="glass BJ41600S">
                     <div class="d-flex justify-space-between">
-                        <p><a class="product-name" href="#">BJ41600S</a></p>
+                        <h6><a class="product-name" href="#">BJ41600S</a></h6>
                         <p class="product-price">NTD3,490</p>
                     </div>
                     <div class="d-flex">
@@ -154,7 +154,7 @@
                 <li class="col-3 col-md-6 col-sm-4 px-3 mb-20 mb-sm-10">
                     <img class="product-img" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-12.png" alt="glass BJ41600S">
                     <div class="d-flex justify-space-between">
-                        <p><a class="product-name" href="#">BJ41600S</a></p>
+                        <h6><a class="product-name" href="#">BJ41600S</a></h6>
                         <p class="product-price">NTD3,490</p>
                     </div>
                     <div class="d-flex">
