--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="shortcut icon" href="/GlassesRWDwebsite/assets/glass-icon-8bacf2e0.svg" type="image/x-icon">
     <title>Glasses官網</title>
-  <script type="module" crossorigin src="/GlassesRWDwebsite/assets/main-12448491.js"></script>
-  <link rel="stylesheet" href="/GlassesRWDwebsite/assets/main-5bfb57f9.css">
+  <script type="module" crossorigin src="/GlassesRWDwebsite/assets/main-b7455615.js"></script>
+  <link rel="stylesheet" href="/GlassesRWDwebsite/assets/main-1f828d08.css">
 </head>
 <body>
     <nav class="navbar bg-primary">
@@ -96,7 +96,7 @@
               <li class="col-3 col-md-6 col-sm-4 px-3 mb-md-6">
                   <div class="customer-item">
                       <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-1.png" alt="Jessy">
-                      <div class="p-4">
+                      <div class="customer-text p-4">
                           <p class="customer-name mb-2">Jessy</p>
                           <p class="mb-18">眼鏡品質優良，下次還會想來這邊購買！</p>
                           <p class="customer-date">2021/06/20</p>
@@ -106,7 +106,7 @@
               <li class="col-3 col-md-6 col-sm-4 px-3 mb-md-6">
                   <div class="customer-item">
                       <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-2.png" alt="凱倫">
-                      <div class="p-4">
+                      <div class="customer-text p-4">
                           <p class="customer-name mb-2">凱倫</p>
                           <p class="mb-18">做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
                           <p class="customer-date">2021/04/18</p>
@@ -116,7 +116,7 @@
               <li class="col-3 col-md-6 col-sm-4 px-3 mb-sm-6">
                   <div class="customer-item">
                       <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-3.png" alt="悠悠">
-                      <div class="p-4">
+                      <div class="customer-text p-4">
                           <p class="customer-name mb-2">悠悠</p>
                           <p class="mb-18">謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
                           <p class="customer-date">2020/12/25</p>
@@ -126,7 +126,7 @@
               <li class="col-3 col-md-6 col-sm-4 px-3">
                   <div class="customer-item">
                       <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-4.png" alt="Kyuan">
-                      <div class="p-4">
+                      <div class="customer-text p-4">
                           <p class="customer-name mb-2">Kyuan</p>
                           <p class="mb-18">服務很好，品質沒有任何問題，非常喜歡。</p>
                           <p class="customer-date">2020/10/31</p>
@@ -145,13 +145,13 @@
                   <label class="mb-2" for="name">姓名</label>
                   <input class="mb-4" id="name" type="text" placeholder="陳小明">
                   <label class="mb-2" for="mobile">聯絡電話</label>
-                  <input class="mb-4" id="mobile" type="text" placeholder="0912-345-678">
+                  <input class="mb-4" id="mobile" type="tel" placeholder="0912-345-678">
                   <label class="mb-2" for="mail">電子郵件</label>
-                  <input class="mb-4" id="mail" type="text" placeholder="example@email.com">
+                  <input class="mb-4" id="mail" type="email" placeholder="example@email.com">
                   <label class="mb-2" for="feedback">意見反應</label>
                   <textarea class="mb-4" id="feedback" name="feedback" placeholder="請輸入您的意見"></textarea>
                   <div class="d-flex mb-12 mb-sm-6">
-                      <input class="mr-1" type="checkbox" name="privacy" value="agree">
+                      <input class="mr-1" type="checkbox" name="privacy" id="privacy" value="agree">
                       <label for="privacy">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
                   </div>
                   <input class="mx-auto" type="submit" value="確認送出">
@@ -161,8 +161,8 @@
     </div>
     <div class="footer bg-primary">
     <div class="container">
-        <div class="d-flex justify-space-between sm-justify-end align-items-center mb-9">
-            <ul class="d-flex sm-d-none">
+        <div class="d-flex justify-space-between align-items-center sm-justify-end mb-7">
+            <ul class="footer-menu d-flex sm-d-none">
                 <li><a class="text-light mr-12" href="index.html">首頁</a></li>
                 <li><a class="text-light mr-12" href="product.html">系列鏡框</a></li>
                 <li><a class="text-light mr-12" href="#">門市據點</a></li>
